# now-mcp

./: Cargo.toml
.github/workflows/: deploy.yml
scripts/: install.sh
src/: main.rs  prompt_registry.rs
